--- a/roles/nginx/templates/nginx.j2
+++ b/roles/nginx/templates/nginx.j2
@@ -22,8 +22,7 @@ server {
     }
 
     location / {
-        uwsgi_pass  unix:///tmp/django.sock;
-        include     uwsgi_params; 
+        proxy_pass http://127.0.0.1:8888;
     }
 }
 
