--- a/roles/flask/templates/config.j2
+++ b/roles/flask/templates/config.j2
@@ -1,5 +1,5 @@
 import os
 basedir = os.path.abspath(os.path.dirname(__file__))
     
-SQLALCHEMY_DATABASE_URI = 'sqlite:///' + os.path.join(basedir, 'app.db')
+SQLALCHEMY_DATABASE_URI = 'mysql://{{ db_user }}:{{ db_user_password }}@localhost/{{ db_name }}'
 SQLALCHEMY_MIGRATE_REPO = os.path.join(basedir, 'db_repository')
