--- a/roles/flask/templates/app.j2
+++ b/roles/flask/templates/app.j2
@@ -1,6 +1,13 @@
 from flask import Flask
-from flask.ext.sqlalchemy import SQLAlchemy
+from flask_sqlalchemy import SQLAlchemy
 
 app = Flask(__name__)
 app.config.from_object('config')
 db = SQLAlchemy(app)
+
+@app.route('/')
+def hello_world():
+    return '<html><header></header><body>Hello world</body></html>'
+
+if __name__ == '__main__':
+	app.run(debug = True, host='0.0.0.0')
