--- a/roles/flask/templates/config.j2
+++ b/roles/flask/templates/config.j2
@@ -3,3 +3,4 @@ basedir = os.path.abspath(os.path.dirname(__file__))
     
 SQLALCHEMY_DATABASE_URI = '{{ db_engine }}://{{ db_user }}:{{ db_user_password }}@localhost/{{ db_name }}'
 SQLALCHEMY_MIGRATE_REPO = os.path.join(basedir, 'db_repository')
+SQLALCHEMY_TRACK_MODIFICATIONS = True
