--- a/roles/nginx/templates/nginx.j2
+++ b/roles/nginx/templates/nginx.j2
@@ -12,6 +12,7 @@ server {
     client_max_body_size 5m;
     client_body_buffer_size 100k;
     
+    {% if static == true %}
     location /media  {
         alias {{ project_dir }}/media;  
     }
@@ -20,9 +21,10 @@ server {
         alias {{ project_dir }}/static; 
 
     }
+    {% endif %}
 
     location / {
-        proxy_pass http://127.0.0.1:8888;
+        proxy_pass http://127.0.0.1:{{ port }};
     }
 }
 
